public/menu/menustyles.css
.menu-nav {
	width: 100%;
	height: 65px;
	border-bottom: 5px dashed #FFAF35;
}

.nav-item {
	float: left;
}

.nav-item a{
	text-decoration: none;
}

a.nav-icon {
	float: left;
	display: inline-block;
	height: 65px;
	width: 65px;
	background-size: 35px;
	background-position: 50%;
	background-repeat: no-repeat;
}

.nav-item .phone a {
	font-weight: normal;
}

.nav-item p {
	display: inline-block;
	line-height: 32.5px;
}

/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/

.suboptions.menu {
	margin-top: 50px;
	line-height: 1.5;
}

.suboptions.menu ul {
	margin: auto;
	height: 78px;
	width: 95%;
	display: flex;
	justify-content: space-between;
	transition: all 1s ease-in-out;
}

.suboptions.menu li {
	display: inline-block;
	border: 1px solid #DDDDDD;
	margin: 15px 5px;
	padding: 10px;
	font-family: 'Open Sans', sans-serif;
	font-size: 15px;
	letter-spacing: 0px;
	transition: border 0.15s ease-in-out;
}

.suboptions.menu li:hover {
	border-color: #FFAF35;
	border-bottom: 8px solid #FFAF35;
}

.suboptions.menu a:hover {
	color: #333333;
}

/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/

#menu-toggle { display: none; }

.label-toggle { display: none; }

.menu.title {
	margin: 55px auto 0px auto;
	border: 5px double #CCCCCC;
}

/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/

#contentAS {
	width: 80%;
	margin: 50px auto;
	font-family: 'Julius Sans One', sans-serif;
}

/* only for COMBOS and FAMILY DINNER menus */
p#etc {
	margin: 50px auto 0px auto;
	padding: 5px 10px;
	text-align: center;
	font-family: 'Open Sans', sans-serif;
	font-size: 13px;
}

.column {
	display: inline-block;
	width: 45%;
	vertical-align: top;
}

.column:nth-child(2n){
	margin-right: 90px;
}

.content {
	text-align: left;
	margin-top: 30px;
}

.content:nth-child(2){
	margin-top: 80px;
}

.content h1 {
	font-family: 'Julius Sans One', sans-serif;
	color: #555555;
	border-bottom: 1px solid #FFAF35;
	letter-spacing: 0.4em;
	font-size: 35px;
}

.item {
	color: #333333;
	border-bottom: 1px solid #CCCCCC;
	margin-bottom: 15px;
	padding-top: 5px;
}

.item p {
	font-family: 'Oswald', sans-serif;
	letter-spacing: 0.08em;
	font-size: 15px;
	white-space: nowrap;
}

.item p.desc {
	white-space: normal;
}

.desc {
	font-family: 'Open Sans', sans-serif !important;
	font-size: 13px !important;
}

.item span {
	display: block;
	float: right;
}

.item ul {
	text-align: center;
	list-style: none;
	background-color: white;
	margin-top: 30px;
	padding: 25px 0px;
	border: 10px dashed #EEEEEE;
}

.item li {
	line-height: 1.8;
}

.last.item{
	border-bottom: none;
}

/* only for COMBO menu */
p.combo {
	line-height: 1.2;
}

.combo.item p {
	line-height: 2.0;
}

/* only for FAMILY DINNER menu */
p.family.desc{
	line-height: 1.8;
}


/*_________________________________________________
SCREEN-SIZE ADJUSTMENTS */

/* - change item-price positioning - */
@media(max-width: 1100px){
	.item span {
		float: none;
		display: block;
		margin-top: 5px;
	}
}

/* - minor adjustments - */
@media (max-width: 910px){
	#contentAS{
		width: 85%;
	}

	.content:nth-child(2){
		margin-top: 100px;
	}
}

/* - change submenu to hamburger format + stack menu columns - */
@media (max-width: 738px){

	.suboptions.menu {
		margin-bottom: 0px;
		line-height: 1.0;
	}

	.suboptions.menu ul {
		display: block;
		height: 0;
		opacity: 0;
		text-align: center;
		transition: all 0.75s ease-in-out;
		width: 85%;
		visibility: hidden;
		margin-top: 30px;
	}

	.suboptions.menu li {
		display: block;
		border: 1px solid #AAAAAA;
		font-size: 18px;
		padding: 25px;
	}

	#menu-toggle:checked ~ ul {
		opacity: 1;
		height: 570px;
		visibility: visible;
	}

	.label-toggle {
		display: block;
		margin: -15px auto;
		border: 4px double #FFAF35;
		border-radius: 10px;
		padding: 5px;
		height: 60px;
		width: 60px;
		cursor: pointer;
		background-image: url('../../res/icons/svg/021-menu-1.svg');
		background-size: 40px;
		background-repeat: no-repeat;
		background-color: white;
		background-position: 50%;
		transition: all 0.15s ease-in-out;
	}

	.label-toggle:hover {
		border-color: white;
		background-color: #FFAF35;
	}

	.menu.title {
		margin-top: 40px;
		margin-bottom: 70px;
	}

	/***************************************************/

	.column {
		display: block;
		margin: auto;
		width: 85%;
	}

	/***************************************************/

	.last.item {
		border-bottom: none;
	}

	.column:nth-child(2n) .last.item {
		border-bottom: 1px solid #DDDDDD;
	}

	.column:nth-child(2n){
		margin-right: 20px;
	}

	/* used to separate TWO (and only TWO) menu items */
	.last.item.splitter{
		border-bottom: 1px solid #CCCCCC !important;
	}

	/***************************************************/
}

/* - minor adjustments - reformat top nav-bar - */
@media (max-width: 518px){
	.column {
		width: 90%;
	}

	/***************************************************/

	.menu-nav{
		height: 95px;
	}

	.nav-item:nth-child(2){
		margin-top: -10px;
		clear: left;
	}

	a.nav-icon {
		height: 50px;
		width: 50px;
		background-size: 35px;
	}

	.nav-item p {
		line-height: 20px;
	}
}

